parallel_iocs
Add building archiver inside docker container

Building epics in a docker file

Add more tests to the parallel epics integration tests category

Add SampleBufferOverFlowTest to ParallelEpicsIntegrationTests

Use a static variable to track status of default TomcatSetup

Running some integration tests in parallel

Add a new test group ParallelEpicsIntegrationTests which is for tests with multiple iocs running at the same time and/or a single tomcat instance to test against.